:bug: Simple fix where the navbar brand was hidden behind the nav section on mobile, meaning you couldn't click the logo to take you home. Fixed in this patch.

--- a/assets/src/sass/components/_navbar.scss
+++ b/assets/src/sass/components/_navbar.scss
@@ -36,6 +36,7 @@ $button-hover-color: #5b5ead; // What hover color do you want the button to be?
   padding-left: 20px;
   position: absolute;
   text-transform: uppercase;
+  z-index: 15;
   a,
   a:visited {
     color: $nav-font-color;
